--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -1,10 +1,23 @@
 {
   "name": "@parklego/theme",
   "version": "0.0.1",
+  "type": "module",
+  "main": "dist/index.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "scripts": {
-    "build": "esbuild --minify src/index.js --bundle --outfile=dist/out.js"
+    "build": "npm run clean && npm run build:js && npm run build:ts",
+    "build:js": "node build.js",
+    "build:ts": "tsc --emitDeclarationOnly",
+    "clean": "rm -rf dist"
   },
   "devDependencies": {
-    "esbuild": "^0.16.17"
+    "esbuild": "^0.16.17",
+    "typescript": "^5.4.5"
   }
 }
