--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "design-system",
   "version": "0.0.0",
+  "workspaces": [
+    "packages/**/*",
+    "services/**/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "nx build",
+    "graph": "nx run-many --target=build --graph"
+  },
+  "packageManager": "yarn@4.1.1",
+  "devDependencies": {
+    "eslint": "9.1.1",
+    "nx": "^18.3.4",
+    "prettier": "^3.0.3",
+    "typescript": "^5.4.5"
   }
 }
