--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   ],
   "scripts": {
     "build": "nx build",
-    "graph": "nx run-many --target=build --graph"
+    "graph": "nx run-many --target=build --graph",
+    "dev:all": "yarn dev:storybook && yarn dev:packages",
+    "dev:storybook": "nx storybook @parklego/storybook",
+    "dev:packages": "nx run-many --target=dev --projects='@parklego/react-components-*'"
   },
   "packageManager": "yarn@4.1.1",
   "devDependencies": {
