--- a/packages/react/components/layout/package.json
+++ b/packages/react/components/layout/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.3.0",
     "@vanilla-extract/css": "^1.14.2",
     "@vanilla-extract/esbuild-plugin": "^2.3.5",
+    "@vanilla-extract/sprinkles": "^1.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.4.5"
@@ -32,5 +33,8 @@
   "peerDependencies": {
     "@parklego/themes": "workspace:^",
     "react": "*"
+  },
+  "dependencies": {
+    "clsx": "^2.1.1"
   }
 }
